--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,6 @@
   ],
   "dependencies": {
     "polymer": "~1.0.9",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#~1.0.5"
   }
 }
