--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gig-select",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "homepage": "https://github.com/gigigo-html5/gig-select",
   "authors": [
     "Pedro Peña <pedro.jose@gigigo.com>"
@@ -15,7 +15,9 @@
   ],
   "dependencies": {
     "polymer": "~1.2.0",
-    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#~1.0.5",
-    "components-font-awesome": "~4.5.0"
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#~1.1.2",
+    "components-font-awesome": "~4.5.0",
+    "font-roboto": "~0.0.2",
+    "gig-html": "~0.0.1"
   }
 }
