--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gig-select",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Webcomponents to manage custom select",
   "main": "gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "./node_modules/.bin/grunt release"
+    "release": "./node_modules/.bin/grunt release",
+    "postinstall": "./node_modules/.bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -19,16 +20,15 @@
   "devDependencies": {
     "bower": "*",
     "grunt": ">=0.4.0",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "*",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "*",
     "grunt-conventional-changelog": "0.0.12",
     "grunt-release": "~0.3.3",
     "grunt-vulcanize": "^1.0.0",
-    "grunt-cli": "^0.1.13",
     "karma": "~0.8.0"
   },
   "homepage": "https://github.com/gigigo-html5/gig-select",
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
